[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["j-about <142051449+j-about@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
pylint = "*"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
